k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infraguard-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dev.infraguard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infraguard-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infraguard-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: staging.infraguard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infraguard-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infraguard-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prod.infraguard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infraguard-service
            port:
              number: 80
